made the module actually useful

--- a/notebooks/sea_ice_thickness_testground.ipynb
+++ b/notebooks/sea_ice_thickness_testground.ipynb
@@ -5,13 +5,55 @@
    "execution_count": null,
    "id": "00df9c0e",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'IceReader' from 'obs_seaice_analysis' (unknown location)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m repo_root = Path(\u001b[33m\"\u001b[39m\u001b[33m/home/581/da1339/AFIM\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      5\u001b[39m sys.path.insert(\u001b[32m0\u001b[39m, \u001b[38;5;28mstr\u001b[39m(repo_root / \u001b[33m\"\u001b[39m\u001b[33msrc\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mobs_seaice_analysis\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m IceReader\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'IceReader' from 'obs_seaice_analysis' (unknown location)"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "repo_root = Path(\"/home/581/da1339/AFIM/obs_seaice_analysis\")\n",
+    "sys.path.insert(0, str(repo_root / \"src\"))\n",
+    "\n",
+    "from obs_seaice_analysis import IceReader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "543751af",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "AFIM (Python 3.13)",
+   "language": "python",
+   "name": "afim"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
